adding command handling to consola